# tianchi-2025

./: README.md  pyproject.toml  requirements.txt  run_aiops_rca.py  run_analysis.bat  run_analysis.ps1
aliyun-python-agent/: README.md  aliyun_instrumentation_dashscope-1.0.0-py3-none-any.whl  aliyun_instrumentation_dify-1.1.0-py3-none-any.whl  aliyun_instrumentation_langchain-1.1.0-py3-none-any.whl  aliyun_instrumentation_llama_index-1.0.3.dev0-py3-none-any.whl  aliyun_instrumentation_mcp-1.0.0-py3-none-any.whl  aliyun_instrumentation_openai-1.0.1-py3-none-any.whl  aliyun_instrumentation_sglang-0.1.0-py3-none-any.whl  aliyun_instrumentation_vllm-0.1.0-py3-none-any.whl  aliyun_opentelemetry_exporter_otlp_proto_common-1.25.0-py3-none-any.whl  aliyun_opentelemetry_exporter_otlp_proto_http-1.25.0-py3-none-any.whl  aliyun_opentelemetry_instrumentation-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_aiohttp_client-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_asgi-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_django-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_fastapi-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_flask-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_httpx-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_logging-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_redis-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_requests-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_sqlalchemy-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_instrumentation_wsgi-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_proto-1.25.0-py3-none-any.whl  aliyun_opentelemetry_sdk-1.25.0-py3-none-any.whl  aliyun_opentelemetry_semantic_conventions-0.46b0.dev0-py3-none-any.whl  aliyun_opentelemetry_util_http-0.46b0.dev0-py3-none-any.whl  aliyun_sdk_extension_arms-1.0.0-py3-none-any.whl  aliyun_semantic_conventions-1.2.0-py3-none-any.whl  opentelemetry_instrumentation_extension_alibaba-0.1.0.dev7-py3-none-any.whl
notebook/: STS_Root_Cause_Analysis_Latency.py  test_cms_query.py
scripts/: download_data.py
src/: agent.py  config.py  enhanced_agent.py  prompts.py  react_agent.py  simple_tracing.py  syntax.py  tools.py
src/agents/: log_agent.py  metric_agent.py  trace_agent.py
src/aiops_engine/: __init__.py  aiops_rca_engine.py  anomaly_detection.py  expert_rules.py  integration_adapter.py  parallel_data_coordinator.py
src/mcp/: __init__.py  minimal_mcp_client.py
src/utils/: __init__.py  evidence_chain.py  local_data_loader.py
tools/: __init__.py  common.py  constants.py  paas_data_tools.py  paas_entity_tools.py  time_utils.py
